# versionneer

./: Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: rust.yml
src/: bincode.rs  lib.rs  simd_json.rs
