[package]
name = "versionneer"
version = "0.2.5"
license = "Apache-2.0/MIT"
description = "Version handling for serialization and deserialization"
authors = ["Heinz N. Gies <heinz@licenser.net>"]
documentation = "https://docs.rs/versionneer"
readme = "README.md"
keywords = ["versioning", "version", "serialization", "deserialize", "encoding"]
categories = ["encoding", "no-std"]
edition = "2024"

[dependencies]
bincode = { version = "2.0.1", optional = true }
simd-json = { version = "0.15.1", optional = true }
simd-json-derive = { version = "0.16.0", optional = true }

[dev-dependencies]
thiserror = "2.0.12"

[features]
default = ["bincode", "simd-json"]
std = []
bincode = ["dep:bincode", "std"]
simd-json = ["dep:simd-json", "dep:simd-json-derive", "std"]
